[package]
name = "RustyBear-Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = "1.0.155"
simplelog = "0.12.1"
vulkano = "0.33.0"
vulkano-win = "0.34.0"
winit = "0.28.2"
